--- a/.editorconfig
+++ b/.editorconfig
@@ -9,8 +9,5 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 indent_style = space
 
-[*.py]
+[*.{py,rst}]
 indent_size = 4
-
-[*.md]
-indent_size = 2
